--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root class="wrapper"></app-root>
 </body>
 </html>
